--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -123,7 +123,8 @@
                             android:layout_height="wrap_content"
                             android:src="@drawable/ic_tepav_control"
                             android:layout_marginEnd="6dp"
-                            android:tint="@color/colorBlack"/>
+                            android:tint="@color/colorBlack"
+                            android:id="@+id/bluetooth"/>
                         <TextView
                             android:textAlignment="center"
                             android:layout_width="match_parent"
