--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -124,7 +124,7 @@
                             android:src="@drawable/ic_tepav_control"
                             android:layout_marginEnd="6dp"
                             android:tint="@color/colorBlack"
-                            android:id="@+id/bluetooth"/>
+                            android:id="@+id/setting"/>
                         <TextView
                             android:textAlignment="center"
                             android:layout_width="match_parent"
