--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -12,11 +12,23 @@
         android:orientation="vertical"
         tools:ignore="MissingConstraints">
 
+        <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Connect BT"
             android:id="@+id/btnConnectBT"/>
+         <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Disconnect"
+            android:id="@+id/btnDisconnectBT"/>
+
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
