--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -67,7 +67,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Duration (minutes)"
+            android:text="Sterilize Duration (minutes)"
             android:layout_marginTop="@dimen/spacing_large"/>
         <EditText
             android:layout_width="match_parent"
