--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -123,7 +123,8 @@
                             android:layout_height="wrap_content"
                             android:src="@drawable/ic_tepav_control"
                             android:layout_marginEnd="6dp"
-                            android:tint="@color/colorBlack"/>
+                            android:tint="@color/colorBlack"
+                            android:id="@+id/btnSetting"/>
                         <TextView
                             android:textAlignment="center"
                             android:layout_width="match_parent"
@@ -165,7 +166,8 @@
                                 android:text="Tepav Device"
                                 android:fontFamily="@font/mulireg"
                                 android:textSize="12sp"
-                                android:paddingHorizontal="6dp"/>
+                                android:paddingHorizontal="6dp"
+                                android:id="@+id/textNameDevice"/>
                             <ImageView
                                 android:layout_gravity="center_vertical"
                                 android:layout_width="12dp"
